--- a/services.html
+++ b/services.html
@@ -8,8 +8,11 @@
     <meta http-equiv="Content-Tyre" content="services/html; charset=UTF-8">
     <meta http-equiv="Content-Tyre" content="about_us/html; charset=UTF-8">
     <meta http-equiv="Content-Tyre" content="Online_recording/html; charset=UTF-8">
+
 	<title>Салон красоты Амстердам</title>
     <link rel="stylesheet"  href="css/style_2.css">
+    <script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
+
 </head>
 <body>
     <header id="header" class="header">
@@ -41,20 +44,20 @@
 		<div class="containerr">
 			<img src="img/fon_2.jpg">
 			<div class="button_1" id="button_1">
-				<button  > Маникюр | Педикюр</button>
+				<button onclick="button_1()" > Маникюр | Педикюр</button>
 			</div>
 			<div class="button_2">
-				<button onclick="toggle_visibility1('price2');" >Стрижки</button>
+				<button  onclick="button_2()">Стрижки</button>
 			</div>
 			<div class="button_3">
-				<button  >Шугаринг</button>
+				<button  onclick="button_3()">Шугаринг</button>
 			</div>
 		</div>
 	</div>
 <!---------------------------------------------------------------------------------------------------------->	
 	<section id="about" class="about">
 		<div class="container">
-			<div id="price1" class="praice1" >
+			<div id="price1" class="price1" >
 			<div id="title1" class="title">
 				<span>Мастер <button  id="btn" class="btn">Анна</button></span>
 			</div>
@@ -81,7 +84,7 @@
 					</tr>
 					<tr>
 						<td width="80%">Наращивание</td>
-						<td class="mani" width="50%" bgcolor="#F3F9FF">140 руб.</td>
+						<td class="mani" width="50%" bgcolor="#F3F9FF">1400 руб.</td>
 					</tr>
 					<tr>
 						<td width="80%">Коррекция</td>
@@ -97,12 +100,12 @@
 					</tr>
 				</table>
 			</div>
-		</div>
+		
 <!---------------------------------------------------------------------------------------------------------->		
 			
 			<div id="price2" class="price2" >
 				<div id="title2" class="title">
-					<span>Мастер <button  id="btn" class="btn">Снежанна Кристина</button></span>
+					<span>Мастер <button  id="btn" class="btn" >Снежанна </button></span>
 				</div>
 				<table  border="1"  cellpadding="0" cellspacing="0"   width="100%" height="30%">
 					<tr>
@@ -173,9 +176,9 @@
 			</div>
 <!---------------------------------------------------------------------------------------------------------->	 
 			
-			<div id="price2" class="price2" >
-				<div id="title2" class="title">
-					<span>Мастер <button  id="btn" class="btn">Снежанна Кристина</button></span>
+			<div id="price3" class="price3" >
+				<div ids="title2" class="title">
+					<span>Мастер <button  id="btn" class="btn"> Кристина</button></span>
 				</div>
 				<table border="1"  cellpadding="0" cellspacing="0"   width="100%" height="30%">
 					<tr>
@@ -287,11 +290,12 @@
 						<td class="mani" width="50%" bgcolor="#F3F9FF">300 руб.</td>
 					</tr>
 					<tr>
-						<td width="80%">Ягодицы</td>
+						<td width="80%">Поясница</td>
 						<td class="mani" width="50%" bgcolor="#F3F9FF">250 руб.</td>
 					</tr>
 				</table>
 			</div>
+		</div>
 		<div class="button">
 			<a href="Online_recording.html#Online_recording">Записаться Online</a>
 		</div>
@@ -307,5 +311,6 @@
 <!------------------------------------------------------------------------>
 <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
 <script src="js/menu_2.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
