--- a/Online_recording.html
+++ b/Online_recording.html
@@ -6,13 +6,10 @@
 	<meta http-equiv="Content-Tyre" content="title/html; charset=UTF-8">
 	<meta http-equiv="Content-Tyre" content="services/html; charset=UTF-8">
     <meta http-equiv="Content-Tyre" content="about_us/html; charset=UTF-8">
-    <meta http-equiv="Content-Tyre" content="dete/html; charset=UTF-8">
+    <meta http-equiv="Content-Tyre" content="personal_Information/html; charset=UTF-8">
 	<title>Салон красоты Амстердам</title>
-	<link rel="stylesheet"  href="css/style4.css">
-	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/i18n/jquery-ui-i18n.min.js"></script>
+	<link rel="stylesheet"  href="css/online_reg_style.css">
+
 </head>
 <body>
 	<header id="header" class="header">
@@ -23,107 +20,98 @@
 						<a onclick="javascript:history.back(); return false;">Назад</a>
 					</li>
 					<li> 
-						<a href="#offer">Онланй - запись</a>
+						<a href="#form">Онланй - запись</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</header>
-<!------------------------------------------------------------------------>		
-	<div  id="offer" class="offer">
-		<form action="" method="POST">
-			<div class="master">
-				<p>Выберите мастера и услугу:</p>
-				<select class="choice" mame="master" >
-					<option value="Anna">Мастер Анна - Комбинированный маникюр </option>
-					<option value="Anna">Мастер Анна - Комбинированный педикюр </option>
-					<option value="Anna">Мастер Анна - Комбинированный педикюр + покрытие гель-лаком </option>
-					<option value="Anna">Мастер Анна - Обработка пальчиков + гель-лак </option>
-					<option value="Anna">Мастер Анна - Снятие гель-лака </option>
-					<option value="Anna">Мастер Анна - Наращивание </option>
-					<option value="Anna">Мастер Анна - Коррекция </option>
-					<option value="Anna">Мастер Анна - Французкий дизайн </option>
+<div class="wrapper">
+	<div class="form">
+		<form action="#" id="form" class="form_body">
+			<div class="form_item">
+				<div class="form_label">Выберите мастера и услугу:</div>
+					<select class="select" mame="master" >
+						<option> </option>
+						<option value="Anna">Мастер Анна - Комбинированный маникюр </option>
+						<option value="Anna">Мастер Анна - Комбинированный педикюр </option>
+						<option value="Anna">Мастер Анна - Комбинированный педикюр + покрытие гель-лаком </option>
+						<option value="Anna">Мастер Анна - Обработка пальчиков + гель-лак </option>
+						<option value="Anna">Мастер Анна - Снятие гель-лака </option>
+						<option value="Anna">Мастер Анна - Наращивание </option>
+						<option value="Anna">Мастер Анна - Коррекция </option>
+						<option value="Anna">Мастер Анна - Французкий дизайн </option>
 
-					<option value="Snezhanna">Мастер Снежанна - Стрижка женская</option>
-					<option value="Snezhanna">Мастер Снежанна - Стрижка мужская</option>
-					<option value="Snezhanna">Мастер Снежанна - Стрижка чёлки</option>
-					<option value="Snezhanna">Мастер Снежанна - Стрижка бороды</option>
-					<option value="Snezhanna">Мастер Снежанна - Детская стрижка (любой возрост)</option>
-					<option value="Snezhanna">Мастер Снежанна - Окрашивание волос</option>
-					<option value="Snezhanna">Мастер Снежанна - Сложное окрашивание</option>
-					<option value="Snezhanna">Мастер Снежанна - Мелирование</option>
-					<option value="Snezhanna">Мастер Снежанна - Химическая завивка</option>
-					<option value="Snezhanna">Мастер Снежанна - Выпримление волос</option>
-					<option value="Snezhanna">Мастер Снежанна - Выпримление чёлки</option>
-					<option value="Snezhanna">Мастер Снежанна - Укладка</option>
-					<option value="Snezhanna">Мастер Снежанна - Чистка кожи головы</option>
-					<option value="Snezhanna">Мастер Снежанна - SPA процедуры</option>
+						<option value="Snezhanna">Мастер Снежанна - Стрижка женская</option>
+						<option value="Snezhanna">Мастер Снежанна - Стрижка мужская</option>
+						<option value="Snezhanna">Мастер Снежанна - Стрижка чёлки</option>
+						<option value="Snezhanna">Мастер Снежанна - Стрижка бороды</option>
+						<option value="Snezhanna">Мастер Снежанна - Детская стрижка (любой возрост)</option>
+						<option value="Snezhanna">Мастер Снежанна - Окрашивание волос</option>
+						<option value="Snezhanna">Мастер Снежанна - Сложное окрашивание</option>
+						<option value="Snezhanna">Мастер Снежанна - Мелирование</option>
+						<option value="Snezhanna">Мастер Снежанна - Химическая завивка</option>
+						<option value="Snezhanna">Мастер Снежанна - Выпримление волос</option>
+						<option value="Snezhanna">Мастер Снежанна - Выпримление чёлки</option>
+						<option value="Snezhanna">Мастер Снежанна - Укладка</option>
+						<option value="Snezhanna">Мастер Снежанна - Чистка кожи головы</option>
+						<option value="Snezhanna">Мастер Снежанна - SPA процедуры</option>
 
+						<option value="Kristina">Мастер Кристина - Стрижка женская</option>
+						<option value="Kristina">Мастер Кристина - Стрижка мужская</option>
+						<option value="Kristina">Мастер Кристина - Стрижка чёлки</option>
+						<option value="Kristina">Мастер Кристина - Детская стрижка (любой возрост)</option>
+						<option value="Kristina">Мастер Кристина - Окрашивание волос</option>
+						<option value="Kristina">Мастер Кристина - Сложное окрашивание</option>
+						<option value="Kristina">Мастер Кристина - Мелирование</option>
+						<option value="Kristina">Мастер Кристина - Химическая завивка</option>
+						<option value="Kristina">Мастер Кристина - Выпримление волос</option>
+						<option value="Kristina">Мастер Кристина - Чистка кожи головы</option>
+						<option value="Kristina">Мастер Кристина - SPA процедуры</option>
 
-					<option value="Kristina">Мастер Кристина - Стрижка женская</option>
-					<option value="Kristina">Мастер Кристина - Стрижка мужская</option>
-					<option value="Kristina">Мастер Кристина - Стрижка чёлки</option>
-					<option value="Kristina">Мастер Кристина - Детская стрижка (любой возрост)</option>
-					<option value="Kristina">Мастер Кристина - Окрашивание волос</option>
-					<option value="Kristina">Мастер Кристина - Сложное окрашивание</option>
-					<option value="Kristina">Мастер Кристина - Мелирование</option>
-					<option value="Kristina">Мастер Кристина - Химическая завивка</option>
-					<option value="Kristina">Мастер Кристина - Выпримление волос</option>
-					<option value="Kristina">Мастер Кристина - Чистка кожи головы</option>
-					<option value="Kristina">Мастер Кристина - SPA процедуры</option>
-
-					<option value="Kristina">Мастер Кристина - Ноги полностью</option>
-					<option value="Kristina">Мастер Кристина - Ноги до колена</option>
-					<option value="Kristina">Мастер Кристина - Глкбокое бикини</option>
-					<option value="Kristina">Мастер Кристина - Классическое бикини</option>
-					<option value="Kristina">Мастер Кристина - Руки полностю</option>
-					<option value="Kristina">Мастер Кристина - Руки до локтя</option>
-					<option value="Kristina">Мастер Кристина - Подмышки</option>
-					<option value="Kristina">Мастер Кристина - Верхняя губа</option>
-					<option value="Kristina">Мастер Кристина - Щеки</option>
-					<option value="Kristina">Мастер Кристина - Подбородок</option>
-					<option value="Kristina">Мастер Кристина - Живот полностью</option>
-					<option value="Kristina">Мастер Кристина - Поясница</option>
-					<option value="Kristina">Мастер Кристина - Живот полностью</option>
-				</select>
-			</div>
-
-			<div class="date">
-				<p>Введите желаемую дуту и время:</p>
-					<input class="dat" name="date" placeholder="Введите дату" />
-			</div>
-
-			<div class="nam">
-				<p>Введите Ваше имя:</p>
-				<input class="name" name="name" placeholder="Ваше имя" />
-			</div>
-
-			<div class="number">
-				<p>Введите Ваш номер телефона:</p>
-				<input class="tel" name="tel" placeholder="Введите номер" />
-			</div>
-
-			<div class="coment">
-				<p>Комментарии:</p>
-				<textarea name="text" cols="80" rows="10"></textarea>
-			</div>
-			<div class="coments">
-				<p>Комментарии:</p>
-				<textarea name="text" cols="60" rows="10"></textarea>
-			</div>
-		</div>
-	</form>
-<!------------------------------------------------------------------------>		
-	<section id="about" class="about">
-		<div class="agreement">
-			<a href="#"><input type="checkbox" name="a" value="yas">Я принимаю условия пользовательского соглашения</a>
-		</div>
-			<div class="agreement">
-			<a href="#"><input type="checkbox" name="a" value="yas">Я соглашаюсь с тем, как будут обрабатываеться мои персональные данные</a>
-		</div>
-		<div class="online_recording">
-			<a href="#">Записатьтся</a>
-		</div>
-	</section>
-	</form>
-<script src="js/deter.js"> </script>
+						<option value="Kristina">Мастер Кристина - Ноги полностью</option>
+						<option value="Kristina">Мастер Кристина - Ноги до колена</option>
+						<option value="Kristina">Мастер Кристина - Глкбокое бикини</option>
+						<option value="Kristina">Мастер Кристина - Классическое бикини</option>
+						<option value="Kristina">Мастер Кристина - Руки полностю</option>
+						<option value="Kristina">Мастер Кристина - Руки до локтя</option>
+						<option value="Kristina">Мастер Кристина - Подмышки</option>
+						<option value="Kristina">Мастер Кристина - Верхняя губа</option>
+						<option value="Kristina">Мастер Кристина - Щеки</option>
+						<option value="Kristina">Мастер Кристина - Подбородок</option>
+						<option value="Kristina">Мастер Кристина - Живот полностью</option>
+						<option value="Kristina">Мастер Кристина - Поясница</option>
+						<option value="Kristina">Мастер Кристина - Живот полностью</option>
+					</select>
+				</div>
+				<div class="form_item">
+					<label for="form_date" class="form_label">Введите желаемую дату и время:</label>
+					<input id="form_date" type="text" name="date" class="form_input _req">
+				</div>
+				<div class="form_item">
+					<label for="form_phone" class="form_label">Введите Ваш номер телефона*:</label>
+					<input id="form_phone" type="text" name="phone" class="form_input _req">
+				</div>
+				<div class="form_item">
+					<label for="form_name" class="form_label">Введите Ваше имя*:</label>
+					<input id="form_name" type="text" name="name" class="form_input _req">
+				</div>
+				<div class="form_item">
+					<label for="form_comment" class="form_label">Комментарии:</label>
+					<textarea name="comment" id="form_comment" class="form_input"></textarea>
+				</div>
+				<div class="form_item">
+					<div class="checkbox">
+						<input id="form_agreement" checked type="checkbox" name="agreement" class="checkbox_input _req">
+						<label for="form_agreement" class="checkbox_label">
+							<span>Я соглашаюсь с тем, как будут обрабатываться мои <a href="personal_Information.html#personal_Information">персональные данные</a>*</span>
+						</label>
+					</div>
+				</div>
+				<button type="submit" class="form_button">Записаться</button>
+		</form>
+	</div>		
+</div>
+<script src="js/form.js"> </script>
 </body>
 </html>
