--- a/about_us.html
+++ b/about_us.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Content-Tyre" content="about_us/html; charset=UTF-8">
     <meta http-equiv="Content-Tyre" content="Online_recording/html; charset=UTF-8">
 	<title>Салон красоты Амстердам</title>
-    <link rel="stylesheet"  href="css/style_3.css">
+    <link rel="stylesheet"  href="css/about_us_style.css">
 </head>
 <body>
     <header id="header" class="header">
@@ -57,14 +57,16 @@
 		<div class="mapssss">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2683.416912722945!2d39.984358!3d47.734565!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40e2189aa3ac9f7d%3A0xf1b5fc5af291034a!2z0YPQuy4g0KnQtdGA0LHQsNC60L7QstCwLCAyLCDQndC-0LLQvtGI0LDRhdGC0LjQvdGB0LosINCg0L7RgdGC0L7QstGB0LrQsNGPINC-0LHQuy4sIDM0NjkwNw!5e0!3m2!1sru!2sru!4v1620162460967!5m2!1sru!2sru" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 		</div>
-		<div class="inst">
-			<img class="insta" src="ico/instagram.svg" >
-			<a href="https://www.instagram.com/salon_krasoty_amsterdam/?igshid=19sea6vw1xe15">SALON_KRASOTY_AMSTERDAM</a>
-		</div>
+		<div class="connect">
+			<div class="inst">
+				<img class="insta" src="ico/instagram.svg" >
+				<a href="https://www.instagram.com/salon_krasoty_amsterdam/?igshid=19sea6vw1xe15">SALON_KRASOTY_AMSTERDAM</a>
+			</div>
 			<div class="contacts">
 				<img class="cont" src="ico/phone.svg">
 				<a href="tel:+7 932-342-23-23">+7 932-342-23-23</a>
 			</div>
+		</div>
 			<div class="button">
 					<a href="Online_recording.html#Online_recording">Записаться Online</a>
 				</div>
@@ -72,13 +74,11 @@
 <!------------------------------------------------------------------------>
 	<footer id="footer" class="footer">
 		<div class="container">
-			<div class="footer_text">
 				<p>© 2021 Салон красоты  AMSTERDAM </br> г. Новошахтинск  ул.Щербакова 2а/26а</p>	
-			</div>
 		</div>
 	</footer>
 <!------------------------------------------------------------------------>
 <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
 <script src="js/menu_3.js"></script>
 </body>
-</html >
+</html>
