--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
     <meta http-equiv="Content-Tyre" content="Online_recording/html; charset=UTF-8">
 
 	<title>Салон красоты Амстердам</title>
-    <link rel="stylesheet"  href="css/style_2.css">
+    <link rel="stylesheet"  href="css/servises_style.css">
     <script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
 
 </head>
@@ -21,7 +21,7 @@
 				<a href="index.html"><img class="logo" src="ico/logo.svg" alt="Amsterdam"></a>
 				<ul class="menu">
 					<li> 
-						<a href="index.html#praice1">Наши работы</a>
+						<a href="index.html#title">Наши работы</a>
 					</li>
 					<li> 
 						<a href="#services.html">Услуги</a>
@@ -295,17 +295,15 @@
 					</tr>
 				</table>
 			</div>
-		</div>
-		<div class="button">
-			<a href="Online_recording.html#Online_recording">Записаться Online</a>
+			<div class="button">
+				<a href="Online_recording.html#Online_recording">Записаться Online</a>
+			</div>
 		</div>
 	</section>
 <!------------------------------------------------------------------------>
 	<footer id="footer" class="footer">
 		<div class="container">
-			<div class="footer_text">
 				<p>© 2021 Салон красоты  AMSTERDAM </br> г. Новошахтинск  ул.Щербакова 2а/26а</p>	
-			</div>
 		</div>
 	</footer>
 <!------------------------------------------------------------------------>
