--- a/about_us.html
+++ b/about_us.html
@@ -15,7 +15,7 @@
     <header id="header" class="header">
 		<div class="container">
 			<div class="nav">
-				<a href="index.html"><img class="logo" src="ico/logo.svg" alt="Amsterdam"></a>
+				<a href="index.html" style=" width: 300px;"><img class="logo" src="ico/logo.svg" alt="Amsterdam"></a>
 				<ul class="menu">
 					<li> 
 						<a href="index.html#title">Наши работы</a>
@@ -30,9 +30,9 @@
 				<a class="tel" href="tel:+7 932-342-23-23" >
 					+7 932-342-23-23
 				</a>
-				<button class="open_meenu">
+				<a class="open_meenu">
 					<img src="ico/menu.svg" alt="Open menu">
-				</button>
+				</a>
 			</div>
 		</div>
 	</header>
