--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<header id="header" class="header">
 		<div class="container">
 			<div class="nav">
-				<a href="index.html"><img class="logo" src="ico/logo.svg" alt="Amsterdam"></a>
+				<a href="index.html" style=" width: 300px;"><img class="logo" src="ico/logo.svg" alt="Amsterdam"></a>
 				<ul class="menu">
 					<li> 
 						<a href="#title">Наши работы</a>
@@ -31,9 +31,9 @@
 				<a class="tel" href="tel:+7 932-342-23-23" >
 					+7 932-342-23-23
 				</a>
-				<button class="menu_open">
+				<a class="menu_open">
 					<img src="ico/menu.svg" alt="Open menu">
-				</button>
+				</a>
 			</div>
 		</div>
 	</header>
