--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
     <header id="header" class="header">
 		<div class="container">
 			<div class="nav">
-				<a href="index.html"><img class="logo" src="ico/logo.svg" alt="Amsterdam"></a>
+				<a href="index.html"  style=" width: 300px;" ><img class="logo" src="ico/logo.svg" alt="Amsterdam"></a>
 				<ul class="menu">
 					<li> 
 						<a href="index.html#title">Наши работы</a>
@@ -33,9 +33,9 @@
 				<a class="tel" href="tel:+7 932-342-23-23" >
 					+7 932-342-23-23
 				</a>
-				<button class="open_meenu">
+				<a class="open_meenu">
 					<img src="ico/menu.svg" alt="Open menu">
-				</button>
+				</a>
 			</div>
 		</div>
 	</header>
@@ -44,13 +44,13 @@
 		<div class="containerr">
 			<img src="img/fon_2.jpg">
 			<div class="button_1" id="button_1">
-				<button onclick="button_1()" > Маникюр | Педикюр</button>
+				<button onclick="button_1()" ><a href="#title1"> Маникюр | Педикюр</a></button>
 			</div>
 			<div class="button_2">
-				<button  onclick="button_2()">Стрижки</button>
+				<button  onclick="button_2()"><a href="#title2"> Стрижки </a></button>
 			</div>
 			<div class="button_3">
-				<button  onclick="button_3()">Шугаринг</button>
+				<button  onclick="button_3()"><a href="#title3"> Шугаринг </a></button>
 			</div>
 		</div>
 	</div>
@@ -105,7 +105,7 @@
 			
 			<div id="price2" class="price2" >
 				<div id="title2" class="title">
-					<span>Мастер <button  id="btn" class="btn" >Снежанна </button></span>
+					<span>Мастер <button  id="btn" class="btn" >Снежанна  </button></span>
 				</div>
 				<table  border="1"  cellpadding="0" cellspacing="0"   width="100%" height="30%">
 					<tr>
@@ -178,7 +178,7 @@
 			
 			<div id="price3" class="price3" >
 				<div ids="title2" class="title">
-					<span>Мастер <button  id="btn" class="btn"> Кристина</button></span>
+					<span>Мастер <button  id="btn" class="btn"> Кристина</button> </span>
 				</div>
 				<table border="1"  cellpadding="0" cellspacing="0"   width="100%" height="30%">
 					<tr>
@@ -237,7 +237,7 @@
 <!---------------------------------------------------------------------------------------------------------->	
 
 			<div id="price4" class="price4" >
-				<div id="title4" class="title">
+				<div id="title3" class="title">
 					<span>Мастер <button  id="btn" class="btn">Кристина</button></span>
 				</div>
 				<table border="1"  cellpadding="0" cellspacing="0"   width="100%" height="30%">
