--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
 	</header>
 <!------------------------------------------------------------------------>		
 	<div  id="offer" class="offer">
-		<h1>Салон красоты Amsterdam </h1>
-		<p>твои волосы - это твой стиль</p>
+		<div class="slog">
+			<h1>Салон красоты AmsterdamM </h1>
+			<p>твои волосы - это твой стиль</p>
+		</div>
 			<div class="flex_wrapper">
 				<div class="slider_wrapper">
 					<div class="slide active">
@@ -96,7 +98,7 @@
 <!------------------------------------------------------------------------>
 	<footer id="footer" class="footer">
 		<div class="container">
-				<p>© 2021 Салон красоты  AMSTERDAM </br> г. Новошахтинск  ул.Щербакова 2а/26а</p>	
+				<p>© 2021 Салон красоты  AMSTERDAMM </br> г. Новошахтинск  ул.Щербакова 2а/26а</p>	
 		</div>
 	</footer>
 <!------------------------------------------------------------------------>
