--- a/services.html
+++ b/services.html
@@ -91,7 +91,7 @@
 						<td class="mani" width="50%" bgcolor="#F3F9FF">900 руб.</td>
 					</tr>
 					<tr>
-						<td width="80%">Французкий дизайн</td>
+						<td width="80%">Французский дизайн</td>
 						<td class="mani" width="50%" bgcolor="#F3F9FF">100 руб.</td>
 					</tr>
 					<tr>
@@ -125,7 +125,7 @@
 						<td class="mani" width="50%" bgcolor="#F3F9FF">от 100 руб.</td>
 					</tr>
 					<tr>
-						<td width="80%">Детская стрижка (любой возрост)</td>
+						<td width="80%">Детская стрижка (любой возраст)</td>
 						<td class="mani" width="50%" bgcolor="#F3F9FF">250-350 руб.</td>
 					</tr>
 					<tr>
@@ -153,11 +153,11 @@
 						<td class="mani" width="50%" bgcolor="#F3F9FF">от 1000 руб.</td>
 					</tr>
 					<tr>
-						<td width="80%">Выпримление волос</td>
+						<td width="80%">Выпрямление волос </td>
 						<td class="mani" width="50%" bgcolor="#F3F9FF">от 2000 руб.</td>
 					</tr>
 					<tr>
-						<td width="80%">Выпримление чёлки</td>
+						<td width="80%">Выпрямление чёлки</td>
 						<td class="mani" width="50%" bgcolor="#F3F9FF">500 руб.</td>
 					</tr>
 					<tr>
@@ -194,7 +194,7 @@
 						<td class="mani" width="50%" bgcolor="#F3F9FF">100 руб.</td>
 					</tr>
 					<tr>
-						<td width="80%">Детская стрижка (любой возрост)</td>
+						<td width="80%">Детская стрижка (любой возраст)</td>
 						<td class="mani" width="50%" bgcolor="#F3F9FF">250-350 руб.</td>
 					</tr>
 					<tr>
@@ -222,7 +222,7 @@
 						<td class="mani" width="50%" bgcolor="#F3F9FF">от 1000 руб.</td>
 					</tr>
 					<tr>
-						<td width="80%">Выпримление волос</td>
+						<td width="80%">Выпрямление волос</td>
 						<td class="mani" width="50%" bgcolor="#F3F9FF">500 руб.</td>
 					</tr>
 						<td width="80%">Чистка кожи головы </td>
@@ -250,7 +250,7 @@
 						<td class="mani"  width="50%" bgcolor="#F3F9FF">450 руб.</td>
 					</tr>
 					<tr>
-						<td width="80%">Глкбокое бикини</td>
+						<td width="80%">Глубокое бикини</td>
 						<td class="mani" width="50%" bgcolor="#F3F9FF">800 руб.</td>
 					</tr>
 					<tr>
@@ -258,7 +258,7 @@
 						<td class="mani" width="50%" bgcolor="#F3F9FF">500 руб.</td>
 					</tr>
 					<tr>
-						<td width="80%">Руки полностю</td>
+						<td width="80%">Руки полностью </td>
 						<td class="mani" width="50%" bgcolor="#F3F9FF">500 руб.</td>
 					</tr>
 					<tr>
@@ -303,7 +303,7 @@
 <!------------------------------------------------------------------------>
 	<footer id="footer" class="footer">
 		<div class="container">
-				<p>© 2021 Салон красоты  AMSTERDAM </br> г. Новошахтинск  ул.Щербакова 2а/26а</p>	
+				<p>© 2021 Салон красоты  AMSTERDAMM </br> г. Новошахтинск  ул.Щербакова 2а/26а</p>	
 		</div>
 	</footer>
 <!------------------------------------------------------------------------>
