--- a/about_us.html
+++ b/about_us.html
@@ -60,7 +60,7 @@
 		<div class="connect">
 			<div class="inst">
 				<img class="insta" src="ico/instagram.svg" >
-				<a href="https://www.instagram.com/salon_krasoty_amsterdam/?igshid=19sea6vw1xe15">SALON_KRASOTY_AMSTERDAM</a>
+				<a href="https://www.instagram.com/salon_krasoty_amsterdam/?igshid=19sea6vw1xe15">SALON_KRASOTY_AMSTERDAMM</a>
 			</div>
 			<div class="contacts">
 				<img class="cont" src="ico/phone.svg">
@@ -74,7 +74,7 @@
 <!------------------------------------------------------------------------>
 	<footer id="footer" class="footer">
 		<div class="container">
-				<p>© 2021 Салон красоты  AMSTERDAM </br> г. Новошахтинск  ул.Щербакова 2а/26а</p>	
+				<p>© 2021 Салон красоты  AMSTERDAMM </br> г. Новошахтинск  ул.Щербакова 2а/26а</p>	
 		</div>
 	</footer>
 <!------------------------------------------------------------------------>
